src/snapshots/afrotd__parser__tests__interpretation_1.4.8_2.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 1
  - 4
  - 8
index: 2
text: "Nachdem der Ball nach einem Scrimmage Down dead wurde,\nerkennt der Umpire, dass Linebacker B55 einen unverdeckten Rückenschützer in Höhe der Taille trägt, welcher augenscheinlich während des\nDowns entblößt wurde."
ruling: "B55 muss das Feld nicht zwangsläufig für einen Down verlassen, aber der unbedeckte Schutz muss vor\ndem nächsten Down bedeckt werden."
