src/snapshots/afrotd__parser__tests__interpretation_10.1.4_2.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 10
  - 1
  - 4
index: 2
text: "Bei einem Kickoff durch Team A von dessen 35-Meterlinie begeht Team B ein Foul, nachdem der unberührte Ball zwischen den\nGoallines ins Aus geht."
ruling: "Team B kann eine Wiederholung\ndes Kickoffs wählen, wodurch Team A von dessen 45-Meterlinie erneut\neinen Free Kick durchführt. Wenn Team B den Ball behält, bekommt\nes diesen an seiner 20-Meterlinie nach einer 15-Meterstrafe von seiner\n35-Meterlinie oder 15 Meter hinter dem Punkt, an den die 5-Meterstrafe\ngegen Team A den Ball bringt (Regel 6.1.8 und 10.1.6)."
