src/snapshots/afrotd__parser__tests__interpretation_10.1.4_5.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 10
  - 1
  - 4
index: 5
text: "A1’s Vorwärtspass wird von B1 abgefangen, der advanct und\nfumbelt. B2 recovert den Ball und advanct ihn fünf weitere Meter. Team\nA foult während oder nach dem Down und Team B foult während des\nLaufes von B2 oder während des Fumbles."
ruling: "Wenn Team A’s\nFoul ein Live Ball Foul war, kann Team B wählen, dass sich die Fouls\naufheben und den Down wiederholen lassen oder eine Möglichkeit wählen, den Ball nach Vervollständigung dessen Strafe zu behalten. Wenn\nTeam A’s Foul ein Dead Ball Foul war, behält Team B nach Durchführung beider Strafen den Ball."
