src/snapshots/afrotd__parser__tests__interpretation_10.1.4_6.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 10
  - 1
  - 4
index: 6
text: "Team A’s legaler Vorwärtspass wird von B45 abgefangen, der\neinige Meter advanct. Während des Returns clippt B23 und A78 tackelt\nB45, indem er an dessen Helmgitter zieht oder dreht."
ruling: "Da\nTeam B vor dem Ballbesitzwechsel nicht gefoult hat, kann es die Aufhebung der Fouls wählen oder den Ballbesitz behalten, nachdem die\nClipping-Strafe vervollständigt wurde."
