src/snapshots/afrotd__parser__tests__interpretation_10.1.5_3.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 10
  - 1
  - 5
index: 3
text: "2. und Goal von der B-3. Ballträger A14 wird an der B-1 zu\nBoden gebracht und danach springt B67 nach. A14 revanchiert sich, indem er B67 schlägt."
ruling: "Die Strafen gleichen sich aus, da noch\nkeine vervollständigt wurde. A14 wird wegen der Schlägerei disqualifiziert. 3. und Goal (Regel 10.1.1)."
