src/snapshots/afrotd__parser__tests__interpretation_10.1.6_1.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 10
  - 1
  - 6
index: 1
text: "Team A puntet und bewegt sich beim Snap illegal. Der unberührte Ball geht zwischen den Goallines ins Aus, wonach Team B ein\npersönliches Foul verursacht."
ruling: "Mögliche Optionen: (1) Team\nB kann wählen, dass der Down wiederholt wird und Team A wird mit\neiner 5-Meterstrafe vom Previous Spot bestraft, gefolgt von einer 15Meterstrafe gegen Team B, die einen automatischen First Down enthält. (2) Team B kann die Bestrafung der illegalen Bewegung ablehnen\nund den Ball nach einer 15-Meterstrafe vom Dead Ball Spot mit einem\nFirst Down und 10 selbst ins Spiel bringen. (3) Team B kann die 5Meterstrafe vom Dead Ball Spot (Regel 6.3.13) annehmen, gefolgt von\neiner 15-Meterstrafe vom Succeeding Spot gegen Team B und bringt\nden Ball mit einem First Down und 10 selbst ins Spiel. In allen Fällen\nstartet die Game Clock mit dem Snap (Regel 3.3.2.d.8)."
